hotfix: Header overflow-x fix (#1823)

--- a/src/components/HorizontalMenu/HorizontalMenu.module.css
+++ b/src/components/HorizontalMenu/HorizontalMenu.module.css
@@ -8,6 +8,5 @@
 }
 
 .light {
-  @apply grid gap-24 overflow-visible m-0 pl-0 justify-between;
-  grid-template-columns: 173px minmax(200px, 400px) 1fr;
+  @apply grid gap-24 overflow-visible m-0 pl-0 justify-between md:grid-cols-header-layout;
 }
